# winauto

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: variant.rs
